chore: update translations

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -160,12 +160,30 @@
     "generateEd25519": "Generate Ed25519",
     "generateECDSA": "Generate ECDSA",
     "generateRSA": "Generate RSA",
+    "keyTypeEcdsaP256": "ECDSA P-256 (SSH)",
+    "keyTypeEcdsaP384": "ECDSA P-384 (SSH)",
+    "keyTypeEcdsaP521": "ECDSA P-521 (SSH)",
+    "keyTypeDsa": "DSA (SSH)",
+    "keyTypeRsaSha256": "RSA-SHA2-256",
+    "keyTypeRsaSha512": "RSA-SHA2-512"
+  },
     "keyPairGeneratedSuccessfully": "{{keyType}} key pair generated successfully",
     "failedToGenerateKeyPair": "Failed to generate key pair",
     "generateKeyPairNote": "Generate a new SSH key pair directly. This will replace any existing keys in the form.",
     "invalidKey": "Invalid Key",
     "detectionError": "Detection Error",
-    "unknown": "Unknown"
+    "removing": "Removing:",
+    "clickToEditCredential": "Click to edit credential",
+    "dragToMoveBetweenFolders": "Drag to move between folders",
+    "keyBasedOnlyForDeployment": "Only SSH key-based credentials can be deployed",
+    "publicKeyRequiredForDeployment": "Public key is required for deployment",
+    "selectTargetHost": "Please select a target host",
+    "keyDeployedSuccessfully": "SSH key deployed successfully",
+    "deploymentFailed": "Deployment failed",
+    "failedToDeployKey": "Failed to deploy SSH key",
+    "clickToRenameFolder": "Click to rename folder",
+    "renameFolder": "Rename folder",
+    "idLabel": "ID:"
   },
   "dragIndicator": {
     "error": "Error: {{error}}",
@@ -188,7 +206,10 @@
     "commandsWillBeSent": "Commands will be sent to {{count}} selected terminal(s).",
     "settings": "Settings",
     "enableRightClickCopyPaste": "Enable right‑click copy/paste",
-    "shareIdeas": "Have ideas for what should come next for ssh tools? Share them on"
+    "shareIdeas": "Have ideas for what should come next for ssh tools? Share them on",
+    "scripts": {
+      "inputPlaceholder": "e.g., System Commands, Docker Scripts"
+    }
   },
   "snippets": {
     "title": "Snippets",
@@ -222,7 +243,34 @@
     "runTooltip": "Execute this snippet in the terminal",
     "copyTooltip": "Copy snippet to clipboard",
     "editTooltip": "Edit this snippet",
-    "deleteTooltip": "Delete this snippet"
+    "deleteTooltip": "Delete this snippet",
+    "newFolder": "New Folder",
+    "reorderSameFolder": "Can only reorder snippets within the same folder",
+    "reorderSuccess": "Snippets reordered successfully",
+    "reorderFailed": "Failed to reorder snippets",
+    "deleteFolderConfirm": "Delete folder \"{{name}}\"? All snippets will be moved to Uncategorized.",
+    "deleteFolderSuccess": "Folder deleted successfully",
+    "deleteFolderFailed": "Failed to delete folder",
+    "updateFolderSuccess": "Folder updated successfully",
+    "createFolderSuccess": "Folder created successfully",
+    "updateFolderFailed": "Failed to update folder",
+    "createFolderFailed": "Failed to create folder",
+    "selectTerminals": "Select Terminals (optional)",
+    "executeOnSelected": "Execute on {{count}} selected terminal(s)",
+    "executeOnCurrent": "Execute on current terminal (click to select multiple)",
+    "folder": "Folder",
+    "selectFolder": "Select a folder or leave empty",
+    "noFolder": "No folder (Uncategorized)",
+    "folderName": "Folder Name",
+    "folderNameRequired": "Folder name is required",
+    "folderColor": "Folder Color",
+    "folderIcon": "Folder Icon",
+    "preview": "Preview",
+    "updateFolder": "Update Folder",
+    "createFolder": "Create Folder",
+    "editFolder": "Edit Folder",
+    "editFolderDescription": "Customize your snippet folder",
+    "createFolderDescription": "Organize your snippets into folders"
   },
   "commandHistory": {
     "title": "History",
@@ -236,7 +284,9 @@
     "deleteSuccess": "Command deleted from history",
     "deleteFailed": "Failed to delete command.",
     "deleteTooltip": "Delete command",
-    "tabHint": "Use Tab in Terminal to autocomplete from command history"
+    "tabHint": "Use Tab in Terminal to autocomplete from command history",
+    "authRequiredRefresh": "Authentication required. Please refresh the page.",
+    "dataAccessLockedReauth": "Data access locked. Please re-authenticate."
   },
   "homepage": {
     "loggedInTitle": "Logged in!",
@@ -309,11 +359,13 @@
     "home": "Home",
     "expired": "Expired",
     "expiresToday": "Expires today",
-    "expiresTomorrow": "Expires tomorrow",
-    "expiresInDays": "Expires in {{days}} days",
+    "expiresTomorrow": "Expires in {{days}} days",
     "updateAvailable": "Update Available",
     "sshPath": "SSH Path",
     "localPath": "Local Path",
+    "appName": "Termix",
+    "resetSidebarWidth": "Reset sidebar width",
+    "dragToResizeSidebar": "Drag to resize sidebar",
     "noAuthCredentials": "No authentication credentials available for this SSH host",
     "noReleases": "No Releases",
     "updatesAndReleases": "Updates & Releases",
@@ -412,7 +464,8 @@
     "sshManager": "SSH Manager",
     "hostManager": "Host Manager",
     "cannotSplitTab": "Cannot split this tab",
-    "tabNavigation": "Tab Navigation"
+    "tabNavigation": "Tab Navigation",
+    "hostTabTitle": "{{username}}@{{ip}}:{{port}}"
   },
   "admin": {
     "title": "Admin Settings",
@@ -670,7 +723,33 @@
     "passwordLoginDisabledWarning": "Password login is disabled. Ensure OIDC is properly configured or you will not be able to log in to Termix.",
     "oidcRequiredWarning": "CRITICAL: Password login is disabled. If you reset or misconfigure OIDC, you will lose all access to Termix and brick your instance. Only proceed if you are absolutely certain.",
     "confirmDisableOIDCWarning": "WARNING: You are about to disable OIDC while password login is also disabled. This will brick your Termix instance and you will lose all access. Are you absolutely sure you want to proceed?",
-    "failedToUpdatePasswordLoginStatus": "Failed to update password login status"
+    "failedToUpdatePasswordLoginStatus": "Failed to update password login status",
+    "sessionManagement": "Session Management",
+    "loadingSessions": "Loading sessions...",
+    "noActiveSessions": "No active sessions found.",
+    "device": "Device",
+    "user": "User",
+    "created": "Created",
+    "lastActive": "Last Active",
+    "expires": "Expires",
+    "revoked": "Revoked",
+    "revokeAllUserSessionsTitle": "Revoke all sessions for this user",
+    "revokeAll": "Revoke All",
+    "linkOidcToPasswordAccount": "Link OIDC Account to Password Account",
+    "linkOidcToPasswordAccountDescription": "Link {{username}} (OIDC user) to an existing password account. This will enable dual authentication for the password account.",
+    "linkOidcWarningTitle": "Warning: OIDC User Data Will Be Deleted",
+    "linkOidcWarningDescription": "This action will:",
+    "linkOidcActionDeleteUser": "Delete the OIDC user account and all their data",
+    "linkOidcActionAddCapability": "Add OIDC login capability to the target password account",
+    "linkOidcActionDualAuth": "Allow the password account to login with both password and OIDC",
+    "linkTargetUsernameLabel": "Target Password Account Username",
+    "linkTargetUsernamePlaceholder": "Enter username of password account",
+    "linkingAccounts": "Linking...",
+    "linkAccountsButton": "Link Accounts",
+    "passwordMinLength": "Password must be at least 6 characters",
+    "currentRoles": "Current Roles",
+    "noRolesAssigned": "No roles assigned",
+    "assignNewRole": "Assign New Role"
   },
   "hosts": {
     "title": "Host Manager",
@@ -731,6 +810,8 @@
     "enableTunnelDesc": "Enable/disable host visibility in Tunnel tab",
     "enableFileManager": "Enable File Manager",
     "enableFileManagerDesc": "Enable/disable host visibility in File Manager tab",
+    "enableDockerDesc": "Enable/disable host visibility in Docker tab",
+    "enableDocker": "Enable Docker",
     "defaultPath": "Default Path",
     "defaultPathDesc": "Default directory when opening file manager for this host",
     "tunnelConnections": "Tunnel Connections",
@@ -833,8 +914,25 @@
     "failedToDeleteHostsInFolder": "Failed to delete hosts in folder",
     "movedToFolder": "Host \"{{name}}\" moved to \"{{folder}}\" successfully",
     "failedToMoveToFolder": "Failed to move host to folder",
+    "clickToRenameFolder": "Click to rename folder",
+    "renameFolder": "Rename folder",
+    "removeFromFolder": "Remove from folder \"{{folder}}\"",
+    "editHostTooltip": "Edit host",
+    "deleteHostTooltip": "Delete host",
+    "exportHostTooltip": "Export host",
+    "cloneHostTooltip": "Clone host",
+    "clickToEditHost": "Click to edit host",
+    "dragToMoveBetweenFolders": "Drag to move between folders",
+    "exportedHostConfig": "Exported host configuration for {{name}}",
+    "openTerminal": "Open Terminal",
+    "openFileManager": "Open File Manager",
+    "openTunnels": "Open Tunnels",
+    "openServerDetails": "Open Server Details",
     "statistics": "Statistics",
     "enabledWidgets": "Enabled Widgets",
+    "openServerStats": "Open Server Stats",
+    "openFileManager": "Open File Manager",
+    "openTunnels": "Open Tunnels",
     "enabledWidgetsDesc": "Select which statistics widgets to display for this host",
     "monitoringConfiguration": "Monitoring Configuration",
     "monitoringConfigurationDesc": "Configure how often server statistics and status are checked",
@@ -985,7 +1083,132 @@
     "sudoPasswordAutoFill": "Sudo Password Auto-Fill",
     "sudoPasswordAutoFillDesc": "Automatically offer to insert SSH password when sudo prompts for password",
     "sudoPassword": "Sudo Password",
-    "sudoPasswordDesc": "Optional password for sudo commands (useful with key authentication)"
+    "sudoPasswordDesc": "Optional password for sudo commands (useful with key authentication)",
+    "socks4": "SOCKS4",
+    "socks5": "SOCKS5",
+    "executeSnippetOnConnect": "Execute a snippet when the terminal connects",
+    "autoMosh": "Auto-MOSH",
+    "autoMoshDesc": "Automatically run MOSH command on connect",
+    "moshCommand": "MOSH Command",
+    "moshCommandDesc": "The MOSH command to execute",
+    "environmentVariables": "Environment Variables",
+    "environmentVariablesDesc": "Set custom environment variables for the terminal session",
+    "variableName": "Variable name",
+    "variableValue": "Value",
+    "addVariable": "Add Variable",
+    "docker": "Docker",
+    "openDocker": "Open Docker",
+    "notEnabled": "Docker is not enabled for this host. Enable it in Host Settings to use Docker features.",
+    "validating": "Validating Docker...",
+    "error": "Error",
+    "errorCode": "Error code: {{code}}",
+    "version": "Docker v{{version}}",
+    "current": "Current",
+    "used_limit": "Used / Limit",
+    "percentage": "Percentage",
+    "input": "Input",
+    "output": "Output",
+    "read": "Read",
+    "write": "Write",
+    "pids": "PIDs",
+    "name": "Name",
+    "id": "ID",
+    "state": "State",
+    "console": "Console",
+    "containerMustBeRunning": "Container must be running to connect to console",
+    "authenticationRequired": "Authentication required",
+    "connectedTo": "Connected to {{containerName}}",
+    "disconnected": "Disconnected",
+    "consoleError": "Console error",
+    "errorMessage": "Error: {{message}}",
+    "failedToConnect": "Failed to connect to console",
+    "disconnectedFromContainer": "Disconnected from container console.",
+    "containerNotRunning": "Container is not running",
+    "startContainerToAccess": "Start the container to access the console",
+    "selectShell": "Select shell",
+    "bash": "Bash",
+    "sh": "Sh",
+    "ash": "Ash",
+    "connecting": "Connecting...",
+    "connect": "Connect",
+    "disconnect": "Disconnect",
+    "notConnected": "Not connected",
+    "clickToConnect": "Click Connect to start an interactive shell",
+    "connectingTo": "Connecting to {{containerName}}...",
+    "containerMustBeRunningToViewStats": "Container must be running to view stats",
+    "failedToFetchStats": "Failed to fetch stats",
+    "noContainersFound": "No containers found",
+    "noContainersFoundHint": "Start by creating containers on your server",
+    "searchPlaceholder": "Search by name, image, or ID...",
+    "filterByStatusPlaceholder": "Filter by status",
+    "allContainersCount": "All ({{count}})",
+    "statusCount": "{{status}} ({{count}})",
+    "noContainersMatchFilters": "No containers match your filters",
+    "noContainersMatchFiltersHint": "Try adjusting your search or filter",
+    "containerStarted": "Container {{name}} started",
+    "failedToStartContainer": "Failed to start container: {{error}}",
+    "containerStopped": "Container {{name}} stopped",
+    "failedToStopContainer": "Failed to stop container: {{error}}",
+    "containerRestarted": "Container {{name}} restarted",
+    "failedToRestartContainer": "Failed to restart container: {{error}}",
+    "containerUnpaused": "Container {{name}} unpaused",
+    "containerPaused": "Container {{name}} paused",
+    "failedToTogglePauseContainer": "Failed to {{action}} container: {{error}}",
+    "containerRemoved": "Container {{name}} removed",
+    "failedToRemoveContainer": "Failed to remove container: {{error}}",
+    "image": "Image:",
+    "idLabel": "ID:",
+    "ports": "Ports:",
+    "noPorts": "None",
+    "created": "Created:",
+    "start": "Start",
+    "stop": "Stop",
+    "unpause": "Unpause",
+    "pause": "Pause",
+    "restart": "Restart",
+    "remove": "Remove",
+    "removeContainer": "Remove Container",
+    "confirmRemoveContainer": "Are you sure you want to remove container \"{{name}}\"?",
+    "runningContainerWarning": "Warning: This container is currently running and will be force-removed.",
+    "removing": "Removing:",
+    "containerNotFound": "Container not found",
+    "backToList": "Back to list",
+    "logs": "Logs",
+    "stats": "Stats",
+    "consoleTab": "Console",
+    "failedToFetchLogs": "Failed to fetch logs: {{error}}",
+    "failedToDownloadLogs": "Failed to download logs: {{error}}",
+    "linesToShow": "Lines to show",
+    "last50Lines": "Last 50 lines",
+    "last100Lines": "Last 100 lines",
+    "last500Lines": "Last 500 lines",
+    "last1000Lines": "Last 1000 lines",
+    "allLogs": "All logs",
+    "showTimestamps": "Show Timestamps",
+    "autoRefresh": "Auto Refresh",
+    "filterLogsPlaceholder": "Filter logs...",
+    "noLogsAvailable": "No logs available"
+  },
+  "terminal": {
+    "title": "Split Screen",
+    "none": "None",
+    "twoSplit": "2-Split",
+    "threeSplit": "3-Split",
+    "fourSplit": "4-Split",
+    "availableTabs": "Available Tabs",
+    "dragTabsHint": "Drag tabs into the grid below to position them",
+    "layout": "Layout",
+    "dropHere": "Drop tab here",
+    "apply": "Apply Split",
+    "clear": "Clear",
+    "selectMode": "Select a split mode to get started",
+    "helpText": "Choose how many tabs you want to display at once",
+    "error": {
+      "noAssignments": "Please drag tabs to cells before applying",
+      "fillAllSlots": "Please fill all {{count}} layout spots before applying"
+    },
+    "success": "Split screen applied",
+    "cleared": "Split screen cleared"
   },
   "terminal": {
     "title": "Terminal",
@@ -1316,6 +1539,23 @@
     "loadFileFailed": "Failed to load file: {{error}}",
     "connectedSuccessfully": "Connected successfully",
     "totpVerificationFailed": "TOTP verification failed",
+    "sshConnectionFailed": "SSH connection failed. Please check your connection to {{name}} ({{ip}}:{{port}})",
+    "verificationCodePrompt": "Verification code:",
+    "newFolderDefault": "NewFolder",
+    "newFileDefault": "NewFile.txt",
+    "successfullyMovedItems": "Successfully moved {{count}} items to {{target}}",
+    "move": "Move",
+    "searchInFile": "Search in file (Ctrl+F)",
+    "showKeyboardShortcuts": "Show keyboard shortcuts",
+    "startWritingMarkdown": "Start writing your markdown content...",
+    "loadingFileComparison": "Loading file comparison...",
+    "reload": "Reload",
+    "compare": "Compare",
+    "sideBySide": "Side by Side",
+    "inline": "Inline",
+    "fileComparison": "File Comparison: {{file1}} vs {{file2}}",
+    "fileTooLarge": "File too large: {{error}}",
+    "connectedSuccessfully": "Connected successfully",
     "changePermissions": "Change Permissions",
     "changePermissionsDesc": "Modify file permissions for",
     "currentPermissions": "Current Permissions",
@@ -1338,7 +1578,7 @@
     "connecting": "Connecting...",
     "disconnecting": "Disconnecting...",
     "unknownTunnelStatus": "Unknown",
-    "unknown": "Unknown",
+    "statusUnknown": "Unknown"
     "error": "Error",
     "failed": "Failed",
     "retrying": "Retrying",
@@ -1353,6 +1593,7 @@
     "attempt": "Attempt {{current}} of {{max}}",
     "nextRetryIn": "Next retry in {{seconds}} seconds",
     "checkDockerLogs": "Check your Docker logs for the error reason, join the",
+    "orCreate": "or create a ",,
     "noTunnelConnections": "No tunnel connections configured",
     "tunnelConnections": "Tunnel Connections",
     "addTunnel": "Add Tunnel",
@@ -1641,6 +1882,7 @@
     "commandAutocompleteDesc": "Enable Tab key autocomplete suggestions for terminal commands based on your command history",
     "defaultSnippetFoldersCollapsed": "Collapse Snippet Folders by Default",
     "defaultSnippetFoldersCollapsedDesc": "When enabled, all snippet folders will be collapsed when you open the snippets tab",
+    "terminalSyntaxHighlighting": "Terminal Syntax Highlighting",
     "showHostTags": "Show Host Tags",
     "showHostTagsDesc": "Display tags under each host in the sidebar. Disable to hide all tags.",
     "account": "Account",
@@ -1704,7 +1946,12 @@
     "socks5Username": "proxy username",
     "socks5Password": "proxy password",
     "socks5PresetName": "e.g., Work VPN Chain",
-    "socks5PresetDescription": "e.g., Proxy chain for accessing work servers"
+    "socks5PresetDescription": "e.g., Proxy chain for accessing work servers",
+    "moshCommand": "mosh user@server",
+    "defaultPort": "22",
+    "defaultEndpointPort": "224",
+    "defaultMaxRetries": "3",
+    "defaultRetryInterval": "10"
   },
   "leftSidebar": {
     "failedToLoadHosts": "Failed to load hosts",
@@ -1951,6 +2198,8 @@
     "noCustomRolesToAssign": "No custom roles available. System roles are auto-assigned.",
     "credentialSharingWarning": "Credential Authentication Not Supported for Sharing",
     "credentialSharingWarningDescription": "This host uses credential-based authentication. Shared users will not be able to connect because credentials are encrypted per-user and cannot be shared. Please use password or key-based authentication for hosts you intend to share.",
+    "credentialRequired": "Credential is required when using credential authentication",
+    "credentialRequiredDescription": "This host uses credential-based authentication. Shared users will not be able to connect because credentials are encrypted per-user and cannot be shared. Please use password or key-based authentication for hosts you intend to share.",
     "auditLogs": "Audit Logs",
     "viewAuditLogs": "View Audit Logs",
     "action": "Action",
@@ -2060,6 +2309,7 @@
     "press": "Press",
     "toToggle": "to toggle",
     "close": "Close",
-    "hostManager": "Host Manager"
+    "hostManager": "Host Manager",
+    "pressToToggle": "Press Left Shift twice to open the command palette"
   }
 }
