chore: updating/match themes and split admin settings

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1591,6 +1591,10 @@
     "permissionsChangedSuccessfully": "Permissions changed successfully",
     "failedToChangePermissions": "Failed to change permissions"
   },
+  "tunnel": {
+    "noTunnelsConfigured": "No Tunnels Configured",
+    "configureTunnelsInHostSettings": "Configure tunnel connections in the Host Manager to get started"
+  },
   "tunnels": {
     "title": "SSH Tunnels",
     "noSshTunnels": "No SSH Tunnels",
@@ -1601,6 +1605,7 @@
     "disconnecting": "Disconnecting...",
     "unknownTunnelStatus": "Unknown",
     "statusUnknown": "Unknown",
+    "unknown": "Unknown",
     "error": "Error",
     "failed": "Failed",
     "retrying": "Retrying",
@@ -2333,5 +2338,95 @@
     "close": "Close",
     "hostManager": "Host Manager",
     "pressToToggle": "Press Left Shift twice to open the command palette"
+  },
+  "docker": {
+    "notEnabled": "Docker is not enabled for this host",
+    "validating": "Validating Docker...",
+    "connectingToHost": "Connecting to host...",
+    "error": "Error",
+    "errorCode": "Error code: {{code}}",
+    "version": "Docker {{version}}",
+    "containerStarted": "Container {{name}} started",
+    "failedToStartContainer": "Failed to start container {{name}}",
+    "containerStopped": "Container {{name}} stopped",
+    "failedToStopContainer": "Failed to stop container {{name}}",
+    "containerRestarted": "Container {{name}} restarted",
+    "failedToRestartContainer": "Failed to restart container {{name}}",
+    "containerPaused": "Container {{name}} paused",
+    "containerUnpaused": "Container {{name}} unpaused",
+    "failedToTogglePauseContainer": "Failed to toggle pause state for container {{name}}",
+    "containerRemoved": "Container {{name}} removed",
+    "failedToRemoveContainer": "Failed to remove container {{name}}",
+    "image": "Image",
+    "idLabel": "ID",
+    "ports": "Ports",
+    "noPorts": "No ports",
+    "created": "Created",
+    "start": "Start",
+    "stop": "Stop",
+    "pause": "Pause",
+    "unpause": "Unpause",
+    "restart": "Restart",
+    "remove": "Remove",
+    "removeContainer": "Remove Container",
+    "confirmRemoveContainer": "Are you sure you want to remove the container '{{name}}'? This action cannot be undone.",
+    "runningContainerWarning": "Warning: This container is currently running. Removing it will stop the container first.",
+    "removing": "Removing...",
+    "noContainersFound": "No containers found",
+    "noContainersFoundHint": "No Docker containers are available on this host",
+    "searchPlaceholder": "Search containers...",
+    "filterByStatusPlaceholder": "Filter by status",
+    "allContainersCount": "All ({{count}})",
+    "statusCount": "{{status}} ({{count}})",
+    "noContainersMatchFilters": "No containers match your filters",
+    "noContainersMatchFiltersHint": "Try adjusting your search or filter criteria",
+    "containerMustBeRunningToViewStats": "Container must be running to view statistics",
+    "failedToFetchStats": "Failed to fetch container statistics",
+    "containerNotRunning": "Container not running",
+    "startContainerToViewStats": "Start the container to view statistics",
+    "loadingStats": "Loading statistics...",
+    "errorLoadingStats": "Error loading statistics",
+    "noStatsAvailable": "No statistics available",
+    "cpuUsage": "CPU Usage",
+    "current": "Current",
+    "memoryUsage": "Memory Usage",
+    "usedLimit": "Used / Limit",
+    "percentage": "Percentage",
+    "networkIo": "Network I/O",
+    "input": "Input",
+    "output": "Output",
+    "blockIo": "Block I/O",
+    "read": "Read",
+    "write": "Write",
+    "pids": "PIDs",
+    "containerInformation": "Container Information",
+    "name": "Name",
+    "id": "ID",
+    "state": "State",
+    "disconnectedFromContainer": "Disconnected from container",
+    "containerMustBeRunning": "Container must be running to access console",
+    "authenticationRequired": "Authentication required",
+    "connectedTo": "Connected to {{containerName}}",
+    "disconnected": "Disconnected",
+    "consoleError": "Console error",
+    "errorMessage": "Error: {{message}}",
+    "failedToConnect": "Failed to connect to container",
+    "console": "Console",
+    "selectShell": "Select shell",
+    "bash": "Bash",
+    "sh": "sh",
+    "ash": "ash",
+    "connecting": "Connecting...",
+    "connect": "Connect",
+    "disconnect": "Disconnect",
+    "notConnected": "Not connected",
+    "clickToConnect": "Click connect to start a shell session",
+    "connectingTo": "Connecting to {{containerName}}...",
+    "containerNotFound": "Container not found",
+    "backToList": "Back to List",
+    "logs": "Logs",
+    "stats": "Stats",
+    "consoleTab": "Console",
+    "startContainerToAccess": "Start the container to access the console"
   }
 }
