chore: improve organization and made a few styling changes in host manager

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -2224,9 +2224,8 @@
     "cannotShareWithSelf": "Cannot share host with yourself",
     "noCustomRolesToAssign": "No custom roles available. System roles are auto-assigned.",
     "credentialSharingWarning": "Credential Authentication Not Supported for Sharing",
-    "credentialSharingWarningDescription": "This host uses credential-based authentication. Shared users will not be able to connect because credentials are encrypted per-user and cannot be shared. Please use password or key-based authentication for hosts you intend to share.",
-    "credentialRequired": "Credential is required when using credential authentication",
-    "credentialRequiredDescription": "This host uses credential-based authentication. Shared users will not be able to connect because credentials are encrypted per-user and cannot be shared. Please use password or key-based authentication for hosts you intend to share.",
+    "credentialRequired": "Credential is required when sharing a host",
+    "credentialRequiredDescription": "This host does not use credential-based authentication. In order to share hosts, due to per-user-encryption, the host must use credential based authentication.",
     "auditLogs": "Audit Logs",
     "viewAuditLogs": "View Audit Logs",
     "action": "Action",
