feat: general bug fixes and readme updates

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -473,6 +473,7 @@
     "hosts": "Hosts",
     "credentials": "Credentials",
     "terminal": "Terminal",
+    "docker": "Docker",
     "tunnels": "Tunnels",
     "fileManager": "File Manager",
     "serverStats": "Server Stats",
@@ -2402,6 +2403,8 @@
     "disconnectedFromContainer": "Disconnected from container",
     "containerMustBeRunning": "Container must be running to access console",
     "authenticationRequired": "Authentication required",
+    "verificationCodePrompt": "Enter verification code",
+    "totpVerificationFailed": "TOTP verification failed. Please try again.",
     "connectedTo": "Connected to {{containerName}}",
     "disconnected": "Disconnected",
     "consoleError": "Console error",
