--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -218,6 +218,7 @@
     "run": "Run",
     "empty": "No snippets yet",
     "emptyHint": "Create a snippet to save commonly used commands",
+    "searchSnippets": "Search snippets...",
     "name": "Name",
     "description": "Description",
     "content": "Command",
@@ -283,7 +284,7 @@
     "deleteSuccess": "Command deleted from history",
     "deleteFailed": "Failed to delete command.",
     "deleteTooltip": "Delete command",
-    "tabHint": "Use Tab in Terminal to autocomplete from command history",
+    "tabHint": "Use Tab in Terminal to autocomplete from command history if enabled in User Profile",
     "authRequiredRefresh": "Authentication required. Please refresh the page.",
     "dataAccessLockedReauth": "Data access locked. Please re-authenticate.",
     "loading": "Loading command history...",
@@ -1417,7 +1418,7 @@
     "connectToServer": "Connect to a Server",
     "selectServerToEdit": "Select a server from the sidebar to start editing files",
     "fileOperations": "File Operations",
-    "confirmDeleteMessage": "Are you sure you want to delete <strong>{{name}}</strong>?",
+    "confirmDeleteMessage": "Are you sure you want to delete {{name}}?",
     "confirmDeleteSingleItem": "Are you sure you want to permanently delete \"{{name}}\"?",
     "confirmDeleteMultipleItems": "Are you sure you want to permanently delete {{count}} items?",
     "confirmDeleteMultipleItemsWithFolders": "Are you sure you want to permanently delete {{count}} items? This includes folders and their contents.",
