fix: test new translation issue and add better server-stats support

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1690,6 +1690,11 @@
     "cannotFetchMetrics": "Cannot fetch metrics from offline server",
     "totpRequired": "TOTP Authentication Required",
     "totpUnavailable": "Server Stats unavailable for TOTP-enabled servers",
+    "totpVerified": "TOTP verified, metrics collection started",
+    "totpFailed": "TOTP verification failed",
+    "totpInvalidCode": "Invalid verification code",
+    "totpCancelled": "Metrics collection cancelled",
+    "authenticationFailed": "Authentication failed",
     "load": "Load",
     "editLayout": "Edit Layout",
     "cancelEdit": "Cancel",
