fix: general server stats issues, file manager decoding, ui qol

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -828,6 +828,9 @@
     "hostAddedSuccessfully": "Host \"{{name}}\" added successfully!",
     "hostDeletedSuccessfully": "Host \"{{name}}\" deleted successfully!",
     "failedToSaveHost": "Failed to save host. Please try again.",
+    "savingHost": "Saving host...",
+    "updatingHost": "Updating host...",
+    "cloningHost": "Cloning host...",
     "enableTerminal": "Enable Terminal",
     "enableTerminalDesc": "Enable/disable host visibility in Terminal tab",
     "enableTunnel": "Enable Tunnel",
