fix(i18n-zh): Correct typos and semantic inaccuracies in the zh-CN translation

--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -417,7 +417,7 @@
     "name": "名称",
     "login": "登录",
     "logout": "注销",
-    "register": "登记",
+    "register": "注册",
     "password": "密码",
     "version": "版本",
     "confirmPassword": "确认密码",
